<resources>
    <string name="app_name" translatable="false">DigiPaws</string>
    <string name="launcher_options">Launcher Options</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="app_blocker">App Blocker</string>
    <string name="view_reel_blocker">View/Reel Blocker</string>
    <string name="keyword_blocker">Keyword Blocker (BETA)</string>
    <string name="anti_uninstall">Anti Uninstall</string>
    <string name="usage_tracker">Usage Tracker (BETA)</string>
    <string name="disabled">Disabled</string>
    <string name="select_pinned_apps">Select pinned apps</string>
    <string name="warning_launcher_settings">Set Digipaws as the default launcher to access this option</string>
    <string name="select_blocked_apps">Select blocked apps</string>
    <string name="start_focus_mode">Start focus mode</string>
    <string name="warning_general_settings">Enable General Accessibility Service to access this option</string>
    <string name="manage_warning_screen">Manage Warning Screen</string>
    <string name="manage_cheat_hours">Manage Cheat Hours</string>
    <string name="warning_app_blocker_settings">Enable App Blocker Accessibility Service to manage app blocking</string>
    <string name="warning_view_blocker_settings">Enable View Blocker Accessibility Service to manage view blocking</string>
    <string name="add_custom_keywords">Add Custom Keywords</string>
    <string name="manage_keyword_packs">Manage Keyword Packs</string>
    <string name="warning_keywords_settings">Enable Keyword Blocker Accessibility Service to manage blocked keywords</string>
    <string name="usage_stats">Usage Stats</string>
    <string name="manage_overlay_trackers">Manage Real Time Overlay</string>
    <string name="warning_usage_tracker_settings">Enable Usage Tracker Accessibility Service to manage trackers</string>
    <string name="remove_anti_uninstall">Remove Anti-Uninstall</string>
    <string name="add_cheat_hours">Add Cheat Hours</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="todays_stats">Today\'s Stats</string>
    <string name="you_scrolled_2_d_reels">You scrolled %2$d reels</string>
    <string name="your_average_attention_span_was_2_d_mins">Your average attention span was %2$d mins</string>
    <string name="view_more">View More</string>
    <string name="number_of_reels_scrolled">Number of Reels Scrolled</string>
    <string name="average_attention_span">Average Attention Span</string>
    <string name="apps">Apps:</string>
    <string name="remove">Remove</string>
    <string name="write_down_a_keyword">Write down a keyword</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="select_apps_to_unblock">Select Apps to unblock</string>
    <string name="disable_proceed_button">Disable Proceed Button </string>
    <string name="display_time_elapsed">Display Time Elapsed</string>
    <string name="display_number_of_reels_scrolled">Display number of reels scrolled</string>
    <string name="specify_duration_of_focus_mode_in_mins">Specify duration of focus mode in mins</string>
    <string name="block_adult_keywords">Block Adult Keywords</string>
    <string name="password">Password</string>
    <string name="specify_cooldown_interval_in_minutes">Specify cooldown interval in minutes</string>
    <string name="warning_message">Warning Message</string>
    <string name="allow_viewing_instagram_reels_sent_in_instagram_inbox">Allow viewing instagram reels sent in Instagram inbox</string>
    <string name="allow_opening_the_first_reel_in_feed">Allow opening the first reel in feed</string>
    <string name="in_warning_changeable_cooldown">in-warning changeable cooldown</string>
    <string name="timed_mode">Timed Mode</string>
    <string name="block_all_uninstall_attempts_for_a_set_amount_of_days">Block all uninstall attempts for a specified number of days.</string>
    <string name="password_mode">Password Mode</string>
    <string name="block_all_uninstall_attempts_until_you_remove_anti_uninstall_with_a_password">Block all uninstall attempts until the anti-uninstall protection is removed with a password</string>
    <string name="next">Next</string>
    <string name="password_mode_desc">Make sure not to forget this password. You may not be able to exit anti-uninstall without it.</string>
    <string name="turn_on">Turn On</string>
    <string name="timed_mode_desc">How long would you like to keep anti-uninstall enabled?</string>
    <string name="turn_on_anti_uninstall">Turn on Anti Uninstall</string>
    <string name="minutes">minutes</string>
    <string name="app_icon">app_icon</string>
    <string name="accessibility_permission_app_blocker">
        Enabling this would unlock the following in DigiPaws:\n1. App Blocking\n\n
        DigiPaws needs access to accessibility data to know when you open a specific feature within an app, like a social media feed or a game.
        This lets DigiPaws block those features for you based on your preferences, helping you stay focused and reduce screen distractions.\n\n
        Rest assured, all accessibility data stays securely on your device—we never share or transmit your data, ensuring your privacy is always protected.
        \n\n
    </string>
    <string name="accessibility_permission_view_blocker">
        Enabling this would unlock the following in DigiPaws:\n1. View Blocking\n2. Block Instagram reels,Tikok and Youtube shorts\n\n
        DigiPaws needs access to accessibility data to know when you open a specific feature within an app, like a social media feed or a game.
        This lets DigiPaws block those features for you based on your preferences, helping you stay focused and reduce screen distractions.\n\n
        Rest assured, all accessibility data stays securely on your device—we never share or transmit your data, ensuring your privacy is always protected.
        \n\n
    </string>
    <string name="accessibility_permission_usage_tracker">
        THIS FEATURE REQUIRES DISPLAY OVER OTHER APPS (DRAW OVER OTHER APPS) PERMISSION TO WORK. PLEASE ENABLE IT FIRST AND THEN ENABLE THIS. RESTART IF SERVICE MALFUNCTIONS.\n\n

        Enabling this would unlock the following in DigiPaws:\n1. Count number of reels/tiktoks scrolled\n2. A floating overlay that shows time elapsed\n\n
        DigiPaws needs access to accessibility data to know when you open a specific feature within an app, like a social media feed or a game.
        This lets DigiPaws block those features for you based on your preferences, helping you stay focused and reduce screen distractions.\n\n
        Rest assured, all accessibility data stays securely on your device—we never share or transmit your data, ensuring your privacy is always protected.
        \n\n
    </string>
    <string name="accessibility_permission_keyword_blocker">
        Enabling this would unlock the following in DigiPaws:\n1. Block custom keywords\n2. Block content like adult material\n\n
        DigiPaws needs access to accessibility data to know when you open a specific feature within an app, like a social media feed or a game.
        This lets DigiPaws block those features for you based on your preferences, helping you stay focused and reduce screen distractions.\n\n
        Rest assured, all accessibility data stays securely on your device—we never share or transmit your data, ensuring your privacy is always protected.
        \n\n
    </string>
    <string name="accessibility_permission_general_features">
        Enabling this would unlock the following in DigiPaws:\n1. Focus Mode: block distraction until a set period of time.\n2. Anti-Uninstall (Setup required to run)\n\n
        DigiPaws needs access to accessibility data to know when you open a specific feature within an app, like a social media feed or a game.
        This lets DigiPaws block those features for you based on your preferences, helendping you stay focused and reduce screen distractions.\n\n
        Rest assured, all accessibility data stays securely on your device—we never share or transmit your data, ensuring your privacy is always protected.
        \n\n
    </string>
    <string name="admin_permission_desc">Digipaws Anti-Uninstall</string>
    <string name="title">Title</string>
    <string name="close">Close</string>
    <string name="proceed">Proceed</string>
    <string name="please_enable_device_admin">Please provide device admin permission to access this feature</string>
    <string name="setup_complete">Setup Complete</string>
    <string name="enter_setup">Enter Setup</string>
    <string name="enabled">Enabled</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="manage_keyword_blockers">Manage Keyword Blockers</string>
    <string name="ok">OK</string>
    <string name="anti_uninstall_removed">Anti Uninstall removed</string>
    <string name="failed">Failed</string>
    <string name="incorrect_password_please_try_again">"Incorrect password. Please try again. "</string>
    <string name="retry">Retry</string>
    <string name="start_time">Start Time: %1$d:%2$d</string>
    <string name="end_time_must_be_after_start_time_has_passed">End time must be after start time has passed!</string>
    <string name="end_time">End Time: %02d:%02d</string>
    <string name="start_time_02d_02d">Start Time: %02d:%02d</string>
    <string name="specify_cheat_hours">Specify Cheat Hours</string>
    <string name="remaining_time_anti_uninstall">You still have %1$d days to go before unlocking anti-uninstall</string>
    <string name="add_a_new_keyword">Add a new keyword</string>
    <string name="you_scrolled_reels">You scrolled %1$d reels</string>
    <string name="you_had_an_attention_span_of_seconds_video">You had an attention span of %1$.2f seconds/video</string>
    <string name="failed_to_launch_system_digital_wellbeing">Failed to launch system digital wellbeing</string>
    <string name="reel_count">Reel count</string>
    <string name="short_videos_scrolled">short videos scrolled</string>
    <string name="seconds_video">seconds/video</string>
    <string name="app_s_selected">%1$d app(s) selected</string>
    <string name="please_specify_start_time_first">Please Specify Start Time first</string>
    <string name="please_type_a_title">Please type a title</string>
    <string name="please_select_a_start_time">Please Select a start time</string>
    <string name="please_select_an_end_time">Please Select an end time</string>
    <string name="please_select_a_few_apps">Please select a few apps</string>
    <string name="cheat_timings">%1$d:%2$d to %3$d:%4$d</string>
    <string name="configure_warning_screen">Warning Screen</string>
    <string name="proceed_in">Please wait %1$d seconds before pressing proceed</string>
    <string name="to">To</string>
    <string name="please_specify_time">Please specify time</string>
    <string name="accept">Accept</string>
    <string name="accessibility_perm_desc">DigiPaws uses the Accessibility permission to provide features like app monitoring and usage tracking to enhance your experience. This permission allows DigiPaws to detect app activities and help manage device usage effectively. Rest assured, all data is processed locally on your device and is never sent to any server or third party. Your privacy and data security are our top priorities. \n \n By pressing Accept, you acknowledge and agree to the above .</string>
    <string name="reject">Reject</string>
    <string name="peel_the_onions">Peel the onions</string>
    <string name="fix_your_life">Fix your life</string>
    <string name="perform_actions_like_a_back_press">Perform actions like a back press</string>
    <string name="read_content_on_screen">Read content on screen</string>
    <string name="this_will_allow_digipaws_to">This will allow digipaws to:</string>
</resources>