<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/specify_cheat_hours"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cheat_hour_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_select_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_start_time" />

    <Button
        android:id="@+id/btn_select_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_end_time" />

    <Button
        android:id="@+id/btn_select_unblocked_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_apps_to_unblock" />

    <CheckBox
        android:id="@+id/cb_disable_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_proceed_button" />

</LinearLayout>